--- a/k8s/hpa.yml
+++ b/k8s/hpa.yml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: 360allround-webhpa
+  name: threesixtyallround-webhpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: 360allround-web
+    name: threesixtyallround-web
   minReplicas: 1
   maxReplicas: 6
   metrics:
