--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: threesixtyallround-webservice
+  name: threesixtyallround-web-service
+  namespace: threesixtyallround-web-ns
 spec:
   selector:
     app: threesixtyallround-web
