--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -5,6 +5,6 @@ metadata:
   namespace: threesixtyallround-web-ns
 spec:
   selector:
-    app: threesixtyallround-web
+    app: threesixtyallround-wp
   ports:
     - port: 80 # Default port for image
