--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -23,7 +23,7 @@ spec:
           name: wordpress
           env:
             - name: WORDPRESS_DB_HOST
-              value: myvizionclu01
+              value: myvizionclu01-ams3-vtgate-80fc1025-588fd775db-n875v
             - name: WORDPRESS_DB_DATABASE
               value: threesixtyallround
             - name: WORDPRESS_DB_USER
