--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -27,7 +27,7 @@ spec:
             - name: WORDPRESS_DB_NAME
               value: threesixtyallround
             - name: WORDPRESS_DB_USER
-              value: user
+              value: myvizion
             - name: WORDPRESS_DB_PASSWORD
               value: ""
           ports:
