--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -29,7 +29,7 @@ spec:
             - name: WORDPRESS_DB_USER
               value: myvizion
             - name: WORDPRESS_DB_PASSWORD
-              value: ""
+              value: Y1WKqTOzL43p
           ports:
             - containerPort: 80
               name: wordpress
