--- a/k8s/mysql/threesixtyallround-clu-01-secret.yaml
+++ b/k8s/mysql/threesixtyallround-clu-01-secret.yaml
@@ -7,8 +7,8 @@ stringData:
   users.json: |
     {
       "user": [{
-        "UserData": "threesixty",
-        "Password": "XQmBuDY3bZ5i"
+        "UserData": "user",
+        "Password": ""
       }]
     }
   init_db.sql: |
